# forKumapoonAI

./: README.md
kumapoon/: README.md  forSOUZO_20231003.yml  gym_env_test.py  my_agent.py  pyproject.toml
kumapoon/assets/data/: map.json  map.yaml  map_e.json
kumapoon/dqn_models/: my_agent_v0.pth  my_agent_v0_20231002_0.pth  my_agent_v0_20231002_1.pth  my_agent_v0_20231002_2.pth  my_agent_v0_20231002_3.pth  my_agent_v0_20231002_4.pth  my_agent_v0_20231002_5.pth  my_agent_v0_20231002_6.pth  my_agent_v0_20231003_0.pth  my_agent_v0_20231003_1.pth  my_agent_v0_20231003_2.pth  my_agent_v0_20231006_0_GOOD.pth  my_agent_v0_20231006_2_GOOD.pth  my_agent_v0_20231007_4.pth  my_agent_v0_20231007_5.pth  my_agent_v0_20231018_0.pth  my_agent_v0_20231018_1.pth  my_agent_v0_20231019_0.pth  my_agent_v0_20231019_1.pth  my_agent_v0_20231019_2.pth  my_agent_v0_20231020_0.pth  my_agent_v0_20231020_1.pth  my_agent_v0_20231020_2.pth  my_agent_v0_20231020_3.pth  my_agent_v0_20231023_0.pth  my_agent_v0_20231023_1.pth  my_agent_v0_20231023_2.pth  my_agent_v0_20231025_0.pth  my_agent_v0_20231025_1.pth  my_agent_v0_20231025_2.pth  my_agent_v0_20231025_3_GOOD.pth  my_agent_v0_20231025_4.pth  my_agent_v0_20231026_0.pth  my_agent_v0_20231026_1_GOOD.pth  my_agent_v0_20231030_0_GOOD.pth
kumapoon/dqn_models/checkpoints/: my_agent_v0_rw74.86682490061538_2023-10-20_10-29-58.pth  my_agent_v0_rw78.86959311442133_2023-10-20_10-29-58.pth
kumapoon/kumapoon/: constants.py  controller.py  maploader.py  player.py  shapes.py
kumapoon/src/: __init__.py  main.py
